--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap');
-    </style>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap');</style>
     <title>Értékek</title>
 </head>
 
