--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -64,7 +64,7 @@
       </div>
     </nav>
 
-<section class="kapcsolat">
+<div class="kapcsolat">
   
   <div class="intro">
     <p>Érdeklődik az Értékek program iránt? Kérdése van? Díjmentes árajánlatot szeretne kérni?
@@ -109,7 +109,7 @@
 
     </form>
 
-    <form name="reg" id="reg">
+    <form name="reg2" id="reg2">
       <div class="kapcs2">  
         <div class="cimke2"><span id="c3">T</span><span>ÁJÉKOZTATÁS</span></div><br>
         <label for="mail2">Kérjük írja le észrevételeit/kérdéseit:</label>
@@ -118,14 +118,13 @@
         <input type="email" name="text" id="mail2" required title="Írja be az e-mail címét!">
         <input class="gombok" type="submit" value="Kérdés elküldése" for="megjegyzes2">
       </div>  
-      <div class="intro" id="confirm">
+  <div class="intro" id="confirm">
       <label for="reg2" for="reg">Elolvastam és elfogam az adatkezelési feltételeket:</label><br>
-      <input type="checkbox" name="confirm" id="confirm">
+      <input type="checkbox" name="confirm" id="confirm2">
   </div>
     </form>
-  </div>
-
-</section>
+  </div>                                                                                                                                                                                                                                                                                         
+</div>
 
 <footer>
      <img src="./media/2.png" alt="" id="face" >
