--- a/01. Órák/Java és preprocesszorok/urlap.html
+++ b/01. Órák/Java és preprocesszorok/urlap.html
@@ -52,7 +52,7 @@
 </div>          <hr>
 
 <div id="confirms">
-        <label for="reg2">a regisztrációs feltételeket elfogadom:</label>
+        <label for="reg">a regisztrációs feltételeket elfogadom:</label>
         <input type="checkbox" name="confirm" id="confirm">
 </div>             <hr> <br>
 
