--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="mobildropdown">
         <div class="mobildropdown-content">
             <a class="current" href="#home"> <span id="c1">B</span>EMUTATKOZÁS</a> 
-            <a href=""><span id="c1">R</span>ÓLUNK</a>
+            <a href="#home"><span id="c1">R</span>ÓLUNK</a>
             <div class="dropdown"><span id="c1">A</span> PROGRAMRÓL
                   <div class="dropdown-content">
                         <a href="#"><span id="c1">V</span>ERZIÓK</a>
@@ -58,7 +58,7 @@
                   </div>
             </div>
             <a href="./kapcsolat.html"><span id="c1">K</span>APCSOLAT</a>
-            <a href=""><span id="c1">T</span>ÁMOGATÓNK</a>
+            <a href="#home"><span id="c1">T</span>ÁMOGATÓNK</a>
           </div>
         </div>
       </div>
