--- a/Anyagok/01. Órák/bspekseg/peksutemenyek.html
+++ b/Anyagok/01. Órák/bspekseg/peksutemenyek.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Házi Pékség</title>
+    <title>Házi Pékség - Termékeink - Péksütemények</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/_variables.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,16 +21,27 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="./pekseg.html">Rólunk <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#szolg">Szolgáltatások</a>
+          <a class="nav-link" href="#szolg">Vásárolható termékek</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#kapcs">Kapcsolat</a>
-        </li>
-        <li class="nav-item dropdown">
+        </li>        
+        <li class="nav-item">
+          <a class="nav-link" href="./kavek.html">Kávék</a>
+        </li> <li class="nav-item">
+          <a class="nav-link active" href="./peksutemenyek.html">Péksütemények</a>
+      </ul>
+      <button type="button" class="btn btn-outline-warning p-2 mx-5 d-flex flex-row- "> Kosár
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+          <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+        </svg>
+      </button>
+        <!--</li>
+         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </a>
@@ -41,19 +52,10 @@
               <hr class="dropdown-divider">
             </li>
             <li><a class="dropdown-item" href="#">Ugrás a kosárra</a></li>
-          </ul>
-        </li> 
+          </ul> -->
+        
 
-        <li class="nav-item">
-          <a class="nav-link" href="./kavek.html">Kávék</a>
-        </li> <li class="nav-item">
-          <a class="nav-link" href="./peksutemenyek.html">Péksütemények</a>
-      </ul>
-
-      <button type="button" class="btn btn-outline-warning p-2 mx-5 d-flex flex-row- "> Kosár
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-          <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-        </svg></button>
+ 
     </div>
   </nav>
 
@@ -65,24 +67,15 @@
             
         <article class="row">
                 <div class="col-md-12" id="rolunk">
-                    <h2 class="text-center bg-dark text-light p-2 m-3 rounded">Rólunk</h2>
+                    <h2 class="text-center bg-dark text-light p-2 m-3 rounded">Péksüteményeink</h2>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-5">
-                        <img src="./img/pngwing.com.png" alt="hazipekseg" class="img-thumbnail rounded border-dark p-3 shadow m-3">
+                        <img src="./img/sutik/bof_01.jpg" alt="hazipekseg" class="img-thumbnail rounded border-dark p-3 shadow m-3">
                     </div>
                     <div class="col-md-7 p-5">
                         <p>
-                        Családi kézműves pékségünket 2017 őszén nyitottuk annak a szellemiségében,
-                         hogy a jó és tiszta kenyér nemcsak a testet, de a lelket is táplálja.
-                        Régi álmunk vált valóra: kis műhelyünkben mindössze vízből, lisztből
-                        és sóból készítjük kovászos kenyereinket 32-36 óra alatt, és csak 
-                        egyféle adalékot használunk nap mint nap - a szeretetünket. 
-                        Friss, adalékanyagmentes péksüteményeinket a legkiválóbb hozzávalókból 
-                        készítjük családi receptek alapján valódi vajjal, hazai tojással és 
-                        tejjel. Minden amit készítünk, ezen filozófia szerint születik nálunk 
-                        - legyen szó kávéról, teáról, friss gyümölcsléről vagy szörpről.
-                       <p> Várunk szeretettel</p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolorum! Harum deserunt quis sunt cumque natus nihil aut. Dicta tenetur perspiciatis in, ullam voluptatibus voluptatum! Repellat, odio. Vero, vitae mollitia.
                         </p>
                     </div>
                 </div>
@@ -90,29 +83,39 @@
 
         <article class="row ">
             <div id="szolg">
-                <h2 class="text-center bg-dark text-light p-2 m-3 rounded">Szolgáltatások</h2>
+                <h2 class="text-center bg-dark text-light p-2 m-3 rounded">Termékeink</h2>
             </div>
-                <div class="card col-sm-6 col-lg-4 border-0 bg-transparent">
+                <div class=" card col-sm-6 col-lg-4 border-0 bg-transparent">
                   <div class="card-body">
-                    <h5 class="card-title text-center bg-light rounded p-2">Kártyás fizetés</h5>
-                    <img class="card-img-top img-fluid img-thumbnail rounded border-dark p-2 shadow mx-auto bg-white mb-5" src="./img/terminal.png" alt="Card image cap">
-                    <p class="card-text text-center">Üzleteinkben bankkártyás fizetési megoldást nyújtunk vásárlóinak. A kártyás fizetés rendkívül gyors, hiszen a PayPass fizetéssel éppen annyi idő alatt tudunk fizetni a kártyával, mintha valaki pontosan kiszámított összeget adna át a pénztárosnak, hiszen a kártyát csak a terminálhoz kell érinteni és már meg is történt a fizetés.</p>
+                    <h5 class="card-title text-center bg-light rounded p-2">Cukrozott Zsömle</h5>
+                    <img class="card-img-top img-fluid img-thumbnail rounded border-dark p-2 shadow mx-auto bg-white mb-5" src="./img/sutik/3.jpg" alt="Card image cap">
+                   <p class="text-left mx-5">500-ft / darab</p> <button type="button" class="btn btn-outline-warning p-2 mx-5 d-flex flex-row- "> Kosár
+                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                      </svg></button> 
                   </div>
                 </div>
                 <div class="card card col-sm-6 col-lg-4 border-0 bg-transparent">
                     <div class="card-body">
-                      <h5 class="card-title text-center bg-light rounded p-2">Ingyen Wifi</h5>
-                      <img class="card-img-top img-fluid img-thumbnail rounded border-dark p-2 shadow mx-auto bg-white mb-5" src="./img/wifi.png" alt="Card image cap">
-                      <p class="card-text text-center">Lehetőség van ingyenes wifi használatára, melynek nagy előnye, hogy nem a mobilinternetes csomaguk adatmennyiségét használják, miközben kávéjukat illetve a hozzátartozó péksüteményt fogyasztják.</p>
+                      <h5 class="card-title text-center bg-light rounded p-2">Pizzás csiga</h5>
+                      <img class="card-img-top img-fluid img-thumbnail rounded border-dark p-2 shadow mx-auto bg-white mb-5" src="./img/sutik/4.jpg" alt="Card image cap">
+                      <p class="text-left mx-5">200-ft / darab</p> <button type="button" class="btn btn-outline-warning p-2 mx-5 d-flex flex-row- "> Kosár
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                          <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                        </svg></button>
                     </div>
                   </div>              
                   <div class="card card col-sm-6 col-lg-4 border-0 bg-transparent">
                     <div class="card-body">
-                      <h5 class="card-title text-center bg-light rounded p-2">Előrendelés</h5>
-                      <img class="card-img-top img-fluid img-thumbnail rounded border-dark p-2 shadow mx-auto bg-white mb-5" src="./img/rendeles.png" alt="Card image cap">
-                      <p class="card-text text-center">Saját és kiegészítő termékeink széles választékban találhatóak meg mintaboltjaink polcain. Egyes üzleteinkben lehetőséget biztosítunk arra, hogy vásárlóink a kívánt árucikket személyesen vagy telefonon előrendeljék, ezzel biztosítva, hogy a kívánt termék garantáltan készleten legyen vásárlása napján.</p>
+                      <h5 class="card-title text-center bg-light rounded p-2">Csörögefánk</h5>
+                      <img class="card-img-top img-fluid img-thumbnail rounded border-dark p-2 shadow mx-auto bg-white mb-5" src="./img/sutik/3.jpg" alt="Card image cap">
+                      <p class="text-left mx-5">300-ft / darab</p>   <button type="button" class="btn btn-outline-warning p-2 mx-5 d-flex flex-row- "> Kosár
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                          <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                        </svg></button>
                     </div>
-                  </div>              
+                  </div>
+                  <!--                
                   <div class="card card col-sm-6 col-lg-4 border-0 bg-transparent" >
                     <div class="card-body">
                       <h5 class="card-title text-center bg-light rounded p-2">Kávé</h5>
@@ -136,7 +139,7 @@
                     <p class="text-center">
                         <button type="button" class="btn btn-outline-danger"><a href="https://hu.wikipedia.org/wiki/Franchise"></a> Mi az a Franchise?</button>
                     </p>
-                  </div>
+                  </div>-->
         </article>
 
         <article class="row">
