--- a/Anyagok/01. Órák/Elhelyezés/grid.html
+++ b/Anyagok/01. Órák/Elhelyezés/grid.html
@@ -12,11 +12,10 @@
 <body>
 
 <div class="container">
-    <div class="Első">Első</div>
-    <div class="Második">Második</div>
-    <div class="Harmadik">Harmadik</div>
-    <div class="Negyedik">Negyedik</div>
-    <div class="Ötödik">Ötödik</div>
+    <div class="Első">HEADER</div>
+    <div class="Második">NAV</div>
+    <div class="Harmadik">CONTENT</div>
+    <div class="Negyedik">FOOTER</div>
 </div>    
 
 <br><hr>
