--- a/Anyagok/03. Gyakorlás/Gyakorlás - táblázatok.html
+++ b/Anyagok/03. Gyakorlás/Gyakorlás - táblázatok.html
@@ -64,29 +64,22 @@
 <hr><br>
 
 <table>
+    <caption>Táblázat</caption>
     <tr>
-        <th>Company Name:</th>
-        <td>TuturialBrain</td>
-        <td rowspan="3"></td>
+    <th colspan="2">CÍM</th>
     </tr>
     <tr>
-        <th rowspan="2">Adress</th>
-        <td>Bangalore</td>
-        
+        <td>1. oszlop 1. sor</td>
+        <td>2. oszlop 1. sor</td>
     </tr>
     <tr>
-        <td>Mysore</td>
-        
+        <td>1. oszlop 2. sor</td> 
+        <td>2. oszlop 2. sor</td>   
     </tr>
     <tr>
-        <th>Comapny Name</th>
-        <th colspan="2">Branches</th>
-    </tr>
-    <tr>
-        <td>TuturialBrain</td>
-        <td>Bangalore</td>
-        <td>Mysore</td>
-    </tr>
+        <td>1. oszlop 3. sor</td>
+        <td>2. szlop 3. sor</td>
+    </tr> 
 </table>
 
 <hr><br>
