--- a/index.html
+++ b/index.html
@@ -15,8 +15,32 @@
 
 <body>
 
-    <header>
-    </header>
+  <header>
+    <div class="motto" id="indexhead">
+      <svg viewBox="0 0 140 20">
+          <text x="14" y="17.5" class="elegant">"Adminisztráció segítő  program és fejlődési térkép</text>
+          <text x="36" y="20" class="elegant">a fejlesztő nevelő oktatásban"</text>
+          <text x="13" y="15" class="heavy1">É</text>
+          <text x="20" y="15" class="heavy">rtékek</text></svg> 
+    </div>
+    <div class="logo">
+      <svg class="circ1" viewBox="0 0 100 100">
+          <circle cx="50" cy="50" r="30" stroke="black"/></svg>
+        <div class="third_image"></div>  
+      <svg class="circ2" viewBox="0 0 100 100">
+          <circle cx="50" cy="50" r="28" stroke="gold"/></svg>
+    </div>
+    <div class="supporters">
+    <svg class="circs2" viewBox="0 0 100 100">
+      <circle cx="60" cy="28" r="17" stroke="black"/></svg>
+      <div class="logo1_image"></div>
+      <div class="logo2_image"></div>
+      <svg class="circs1" viewBox="0 0 140 100">
+        <text x="1" y="89" class="currentmenu">B</text>
+        <text x="13" y="89" class="currentmenu1">EMUTATKOZÁS</text>
+      <circle cx="28" cy="45" r="28" stroke="black"/></svg>
+    </div>
+  </header>
   
     <nav>   
 
@@ -71,7 +95,7 @@
             </p>
         </div>
         <div class="card1" style="margin-top: 1%;">
-          <div class="cimke"><span id="c2">I</span><span>nformatívitás és <span id="c2">L</span>etisztult stílus egybegyúrva</span> </div>
+          <div class="cimke"><span id="c2">I</span><span>nformatív és <span id="c2">L</span>etisztult</span> </div>
             <p>A kötelező szakmai anyag megírása eztán alapulhat egy letsztult és jól átlátható formára.  
             </p>
         </div>
@@ -100,6 +124,14 @@
         </p>
       </div> 
     </article>
+    <article>      
+      <div  class="cardback"><img src="./media/vizsgálat2.png" alt="" ></div>
+       <div class="cikk">
+        <div class="cimke"><span id="c2">F</span><span>ELHASZNÁLÓ <span id="c2">B</span>ARÁT</span> </div>
+        <p>A 7 nagy témakör egységes menürendszert tartalmaz és minden olyan funkció helyet kapott benne, amire az átlagfelhasználónak szüksége van. A témakörök külön színvilággal lett tervezve az átláthatóság végett. 
+        </p>
+      </div> 
+    </article>
 
   </div>
 
@@ -112,10 +144,6 @@
     
     </footer>
 
-
-
-
-    
-    <script src="./zeta.js"></script>
+<script src="./zeta.js"></script>
 </body>
 </html>
