--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -43,24 +43,26 @@
     </header>
   
     <nav>   
+
       <div class="mobilmenu"><input class="checkbox" type="checkbox" name="toogle" id="toogle" />
       <div class="hamburger"></div>
       <div class="mobildropdown">
         <div class="mobildropdown-content">
-            <a href="./index.html"> <span id="c1">B</span>EMUTATKOZÁS</a> 
-            <a href="./rolunk.html"><span id="c1">R</span>ÓLUNK</a>
-                        <div class="dropdown"><span id="c1">A</span> PROGRAMRÓL
+            <a  href="./index.html" style="color:black"> <span id="c1">B</span>EMUTATKOZÁS</a> 
+            <a href="./rolunk.html" style="color:black"><span id="c1">R</span>ÓLUNK</a>
+            <div class="dropdown" style="color:black"><span id="c1">A</span> PROGRAMRÓL
                   <div class="dropdown-content">
-                        <a href="#"><span id="c1">V</span>ERZIÓK</a>
-                        <a href="#"><span id="c1">S</span>PECIFIKÁCIÓK</a>
-                        <a href="#"><span id="c1">L</span>ETÖLTÉS</a> 
+                        <a href="./programrol.html" style="color:black"><span id="c1">M</span>IT TUD?</a>
+                        <a href="#" style="color:black"><span id="c1">V</span>ERZIÓK</a>
+                        <a href="#" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
                   </div>
-                        </div>
-            <a class="current" href="#"><span id="c1">K</span>APCSOLAT</a>
+            </div>
+            <a class="current" href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
             <a href=""><span id="c1">T</span>ÁMOGATÓNK</a>
           </div>
         </div>
       </div>
+
     </nav>
 
 <div class="kapcsolat">
@@ -129,9 +131,6 @@
     <img src="./media/3.png" alt="" id="mail">
 </footer> 
 
-
-
-    
 <script src="./zeta.js"></script>
 </body>
 </html>
