--- a/programrol.html
+++ b/programrol.html
@@ -36,8 +36,8 @@
         <div class="logo1_image"></div>
         <div class="logo2_image"></div>
         <svg class="circs1" viewBox="0 0 140 100">
-          <text x="1" y="89" class="currentmenu">B</text>
-          <text x="13" y="89" class="currentmenu1">EMUTATKOZÁS</text>
+          <text x="1" y="89" class="currentmenu">M</text>
+          <text x="13" y="89" class="currentmenu1">IT TUD?</text>
         <circle cx="28" cy="45" r="28" stroke="black"/></svg>
       </div>
     </header>
@@ -48,16 +48,16 @@
       <div class="hamburger"></div>
       <div class="mobildropdown">
         <div class="mobildropdown-content">
-            <a class="current" href="./index.html"> <span id="c1">B</span>EMUTATKOZÁS</a> 
-            <a href="./rolunk.html"><span id="c1">R</span>ÓLUNK</a>
-            <div class="dropdown"><span id="c1">A</span> PROGRAMRÓL
+            <a  href="./index.html" style="color:black"> <span id="c1">B</span>EMUTATKOZÁS</a> 
+            <a href="./rolunk.html" style="color:black"><span id="c1">R</span>ÓLUNK</a>
+            <div class="dropdown" class="current" style="color:black"><span id="c1">A</span> PROGRAMRÓL
                   <div class="dropdown-content">
-                        <a href="#"><span id="c1">V</span>ERZIÓK</a>
-                        <a href="#"><span id="c1">S</span>PECIFIKÁCIÓK</a>
-                        <a href="#"><span id="c1">L</span>ETÖLTÉS</a>
+                        <a class="current"href="./programrol.html" style="color:black"><span id="c1">M</span>IT TUD?</a>
+                        <a href="#" style="color:black"><span id="c1">V</span>ERZIÓK</a>
+                        <a href="#" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
                   </div>
             </div>
-            <a href="./kapcsolat.html"><span id="c1">K</span>APCSOLAT</a>
+            <a href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
             <a href=""><span id="c1">T</span>ÁMOGATÓNK</a>
           </div>
         </div>
@@ -125,11 +125,6 @@
     <img src="./media/3.png" alt="" id="mail">
     
     </footer>
-
-
-
-
-
     
     <script src="./zeta.js"></script>
 </body>
