--- a/rolunk.html
+++ b/rolunk.html
@@ -49,16 +49,16 @@
       <div class="hamburger"></div>
       <div class="mobildropdown">
         <div class="mobildropdown-content">
-            <a href="./index.html"> <span id="c1">B</span>EMUTATKOZÁS</a> 
-            <a class="current" href="./rolunk.html"><span id="c1">R</span>ÓLUNK</a>
-            <div class="dropdown"><span id="c1">A</span> PROGRAMRÓL
+            <a href="./index.html" style="color:black"> <span id="c1">B</span>EMUTATKOZÁS</a> 
+            <a class="current" href="./rolunk.html" style="color:black"><span id="c1">R</span>ÓLUNK</a>
+            <div class="dropdown" style="color:black"><span id="c1">A</span> PROGRAMRÓL
                   <div class="dropdown-content">
-                        <a href="#"><span id="c1">V</span>ERZIÓK</a>
-                        <a href="#"><span id="c1">S</span>PECIFIKÁCIÓK</a>
-                        <a href="#"><span id="c1">L</span>ETÖLTÉS</a>
+                        <a href="./programrol.html" style="color:black"><span id="c1">M</span>IT TUD?</a>
+                        <a href="#" style="color:black"><span id="c1">V</span>ERZIÓK</a>
+                        <a href="#" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
                   </div>
             </div>
-            <a href="./kapcsolat.html"><span id="c1">K</span>APCSOLAT</a>
+            <a href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
             <a href=""><span id="c1">T</span>ÁMOGATÓNK</a>
           </div>
         </div>
@@ -123,11 +123,6 @@
     
     </footer>
 
-
-
-
-
-    
     <script src="./zeta.js"></script>
 </body>
 </html>
