--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -95,7 +95,7 @@
                     <label for="fejl">Fejlesztő Iskola</label>
                     <input type="radio" name="tipus" id="fejl" > 
                     
-                    <label for="szoc">Szociális intézmény</label> 
+                    <label for="szoc">Vizsgáló intézmény</label> 
                     <input type="radio" name="tipus" id="szoc">
                     
                     <label for="al">Alapítvány</label>
