--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -125,10 +125,10 @@
 </div>
 
 <footer>
-     <img src="./media/2.png" alt="" id="face" >
+     <img src="./media/FOOTER/2.png" alt="" id="face" >
      <p> Ha felkeltettük érdeklődését, vagy csak kérdése van írjon nekünek az <a href="mailto:info@ertekek.hu">info@ertekek.hu</a>-ra vagy hívjon a minket <a href="tel:+06301784272"> +36 30 1784272 </a> -es telefonszámon.</p>
-     <img src="./media/1.png" alt="" id="tel">
-    <img src="./media/3.png" alt="" id="mail">
+     <img src="./media/FOOTER/1.png" alt="" id="tel">
+    <img src="./media/FOOTER/3.png" alt="" id="mail">
 </footer> 
 
 <script src="./zeta.js"></script>
