--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     </div>
     <div class="logo">
       <svg class="circ1" viewBox="0 0 100 100">
-          <circle cx="50" cy="50" r="30" stroke="black"/></svg>
-        <div class="third_image"></div>  
+          <circle cx="50" cy="50" r="30" stroke="black"/></svg> 
       <svg class="circ2" viewBox="0 0 100 100">
           <circle cx="50" cy="50" r="28" stroke="gold"/></svg>
     </div>
@@ -77,26 +76,27 @@
             <circle cx="150" cy="150" r="135" stroke="gold"/></svg>
           </div>
         </div>
+
   <div class="mobilszakasz">
-          <p>Az Értékek program egy intelligens kérdőív fejlesztő iskolai intézmények részére.
-            Hozza létre értékeléseit és jellemzéseit, könnyen, gyorsan és hatékonyan!
-          </p>
-  </div>
+          <p><b><i> Értékek egy több formában elérhető okos kérdőív, mely segít felmérni halmozottan sérült gyermekeket/felnőttek képességeit és könnyen áttekinthető, letisztult értékeléseket/jellemzéseket létrehozni róluk. Kövesse nyomon a vizsgált személy vagy személyek fejlődését és spóroljon időt az adminisztrációval!
+  </b></i></p></div>
+
+ 
       </div> 
       <div class="szakaszII">
         <div class="card1">
           <div class="cimke"><span id="c2">É</span><span>rtékeljen <span id="c2">V</span>izsgáljon</span> </div>
-            <p>Az Értékek program egy intelligens kérdőív és értékelő rendszer. Irassa meg negyed, fél vagy éves értékeléseit programunkkal! 
+            <p>Értékeljen az Értékekkel! Irassa meg negyed, fél vagy éves értékeléseit programunkkal! 
             </p>
         </div>
         <div class="card2">
           <div class="cimke"><span id="c2">G</span><span>yors és <span id="c2">H</span>atékony</span> </div>
-            <p>Jellemzések és értékelések automatizációja. Az ön ideje fontos, a mi szakmai anyagunk pedig részletes. 
+            <p>Jellemzések és értékelések elkészítésének automatizációja. Az ön ideje fontos, a mi szakmai anyagunk pedig részletes. 
             </p>
         </div>
         <div class="card1" style="margin-top: 1%;">
           <div class="cimke"><span id="c2">I</span><span>nformatív és <span id="c2">L</span>etisztult</span> </div>
-            <p>A kötelező szakmai anyag megírása eztán alapulhat egy letsztult és jól átlátható formára.  
+            <p>A kötelező szakmai anyag megírása eztán alapulhat egy könnyed és átlátható formára.  
             </p>
         </div>
       
@@ -105,8 +105,18 @@
 
     </section>
 
-    <div class="promo">    
-    <article>      
+
+    <div class="promo">
+      <article>
+      <div class="cikk">
+      <div class="cimke"><span id="c2">R</span><span>észletes <span id="c2">D</span>e átlátható</span> </div>
+        <p>Válasszon hét nagy témakörünkből és válogasson azok alkategóriáiból. Alaposan kidolgozott szakmai anyagunk a biztosíték rá, hogy mindenre kiterjedő mégis átlátható értékelést vagy jellemzést tudjon készíteni. 
+        </p>
+      </div> 
+      <div id="cardback2" class="cardback"><img src="./media/LANDINGPAGE/Értékek.JPG" alt="" ></div>
+    </article>
+          
+    <article>       
       <div class="cikk">
         <div class="cimke"><span id="c2">K</span><span>épességhálók és <span id="c2">C</span>élmeghatározások</span> </div>
         <p>Az szakmai anyag könnyed összerakása egyben egy interaktív képességdiagrammot is készít önnek! Lássa a fejlődést időszakról időszakra. 
