--- a/tamogato.html
+++ b/tamogato.html
@@ -26,6 +26,7 @@
       <div class="logo">
         <svg class="circ1" viewBox="0 0 100 100">
             <circle cx="50" cy="50" r="30" stroke="black"/></svg>
+          <div class="third_image"></div>  
         <svg class="circ2" viewBox="0 0 100 100">
             <circle cx="50" cy="50" r="28" stroke="gold"/></svg>
       </div>
