--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -57,7 +57,7 @@
                   </div>
             </div>
             <a class="current" href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
-            <a href=""><span id="c1">T</span>ÁMOGATÓNK</a>
+            <a href="./temakor.html"><span id="c1">T</span>ÉMAKÖRÖK</a>
           </div>
         </div>
       </div>
