--- a/verziok.html
+++ b/verziok.html
@@ -51,13 +51,13 @@
             <a href="./rolunk.html" style="color:black"><span id="c1">R</span>ÓLUNK</a>
             <div class="dropdown" class="current" style="color:black"><span id="c1">A</span> PROGRAMRÓL
                   <div class="dropdown-content">
-                        <a class="current"href="./programrol.html" style="color:black"><span id="c1">M</span>IT TUD?</a>
-                        <a href="./verziok.html" style="color:black"><span id="c1">V</span>ERZIÓK</a>
+                        <a href="./programrol.html" style="color:black"><span id="c1">M</span>IT TUD?</a>
+                        <a  class="current" href="./verziok.html" style="color:black"><span id="c1">V</span>ERZIÓK</a>
                         <a href="#" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
                   </div>
             </div>
             <a href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
-            <a href=""><span id="c1">T</span>ÁMOGATÓNK</a>
+            <a href="./temakor.html"><span id="c1">T</span>ÉMAKÖRÖK</a>
           </div>
         </div>
       </div>
@@ -117,42 +117,42 @@
         <table>
           <caption>Verziók, fajták, ajánlás és hozzáférhetőség</caption>
         <div class="verziokmobil">
-          <tr ><th colspan="2" >Nyomtatott</th>
+          <tr ><th colspan="2">Nyomtatott</th>
           </tr>
-          <tr><th><span>Tulajdonságok</span></th> <td>Az Értékek legelső kiadása nyomtatott formában történt. Az alaptémakörök és a szakmai anyag is itt lett lefektetve. A részletes szakmai kérdőív papíron használt formájában a vizsgált személyre jellemző vállasz mellé pipát vagy X-et kell tenni, majd a teljes kitöltés után összeírni a megfelelő válaszokat.
+          <tr><th class="fuggoleges"><span>Tulajdonságok</span></th> <td>Az Értékek legelső kiadása nyomtatott formában történt. Az alaptémakörök és a szakmai anyag is itt lett lefektetve. A részletes szakmai kérdőív papíron használt formájában a vizsgált személyre jellemző vállasz mellé pipát vagy X-et kell tenni, majd a teljes kitöltés után összeírni a megfelelő válaszokat.
           </td></tr>
-          <tr><th><span>Követelmények</span></th><td>Csak rászánt időre és egy tollra van szüksége az értékelés elkészítéséhez. :)
+          <tr><th class="fuggoleges"><span>Követelmények</span></th><td>Csak rászánt időre és egy tollra van szüksége az értékelés elkészítéséhez. :)
           </td></tr>
-          <tr><th><span>Igénylés</span></th><td>Az Értékek papír alapú verziójának igényléséhez lépjen kapcsolatba a pécsi Kerek Világ Alapítvánnyal, hogy szervezete egy együttműködési szerződés megkötése után jogosulttá váljon a használatra. 
+          <tr><th class="fuggoleges"><span>Igénylés</span></th><td>Az Értékek papír alapú verziójának igényléséhez lépjen kapcsolatba a pécsi Kerek Világ Alapítvánnyal, hogy szervezete egy együttműködési szerződés megkötése után jogosulttá váljon a használatra. 
           </td></tr>
-          <tr><th><span>Kiknek ajánjluk?</span></th><td>Amennyiben bizonytalan, hogy az ön intézményeben a szakmai anyagunk fő vagy alkategóriái lefedik -e az önöknél előforduló jellemzések és értékelések alapját akkor ez verzió kiváltképp alkalmas lehet áttekintéséhez, mérlegeléshez. A témaköreinkről bővebben itt tud tájékoztatást kapni.
+          <tr><th class="fuggoleges"><span>Kiknek ajánjluk?</span></th><td>Amennyiben bizonytalan, hogy az ön intézményeben a szakmai anyagunk fő vagy alkategóriái lefedik -e az önöknél előforduló jellemzések és értékelések alapját akkor ez verzió kiváltképp alkalmas lehet áttekintéséhez, mérlegeléshez. A témaköreinkről bővebben itt tud tájékoztatást kapni.
           </td></tr>
         </div>
           
         <div class="verziokmobil">
           <tr><th colspan="2" style="padding-top: 50px;">Asztali</th>
           </tr>
-          <tr><th><span>Tulajdonságok</span></th><td>A nyomtatott változat digitalizált és bővített változata. A témakör-menürendszerből választva juthat el a részletes kérdőívhez. A program két félévet vizsgál, a kérdőív is e szerint lett kialakítva. Ha egy állítás igaz az vizsgált személyre akkor a megfelelő félév cellájába kétszer kell kattintani, ezzel érvényesíti választását. A válaszai gyűjteményét megtekintheti és kinyomtathatja: féléves, éves és témakörönkénti formában. Az összegyűjtött válaszok rendezve, egységes stílussal jelennek meg és rendkívül informatívak. 
+          <tr><th class="fuggoleges"><span>Tulajdonságok</span></th><td>A nyomtatott változat digitalizált és bővített változata. A témakör-menürendszerből választva juthat el a részletes kérdőívhez. A program két félévet vizsgál, a kérdőív is e szerint lett kialakítva. Ha egy állítás igaz az vizsgált személyre akkor a megfelelő félév cellájába kétszer kell kattintani, ezzel érvényesíti választását. A válaszai gyűjteményét megtekintheti és kinyomtathatja: féléves, éves és témakörönkénti formában. Az összegyűjtött válaszok rendezve, egységes stílussal jelennek meg és rendkívül informatívak. 
             A program tartalmaz még egy képességháló diagrammot, mely a válaszai alapján skálázza be a vizsgált személy tudását, így vizuálisan is szembetűnik egy-egy időszakon belüli javulás vagy romlás.                  
           </td></tr>
-          <tr><th><span>Követelmények</span></th><td>Az Office alapú asztali verzió csak Windows operációs rendszeren belül működik, továbbá szükséges hozzá a Microsoft Office termékcsalád asztali verziójának megléte. Ezt a telepítő ellenőrizi fogja első indulás előtt.  Ennek a két követelménynek a majd minden oktatási-fejlesztési intézményen belüli számítógép megfelel. Az új számítógépeken majdnem mindig előre telepítve megtalálhatók ezek a keretprogramok, de amennyiben mégsem a „Tisztaszoftver program” lehetőséget biztosít minden magyar pedagógusnak, diáknak és oktatási tevékenységet végző intézménynek a teljesen ingyenes beszerzésére. A „Tisztaszoftver” igényléséről itt tud bővebb tájékoztatást kapni. 
+          <tr><th class="fuggoleges"><span>Követelmények</span></th><td>Az Office alapú asztali verzió csak Windows operációs rendszeren belül működik, továbbá szükséges hozzá a Microsoft Office termékcsalád asztali verziójának megléte. Ezt a telepítő ellenőrizi fogja első indulás előtt.  Ennek a két követelménynek a majd minden oktatási-fejlesztési intézményen belüli számítógép megfelel. Az új számítógépeken majdnem mindig előre telepítve megtalálhatók ezek a keretprogramok, de amennyiben mégsem a „Tisztaszoftver program” lehetőséget biztosít minden magyar pedagógusnak, diáknak és oktatási tevékenységet végző intézménynek a teljesen ingyenes beszerzésére. A „Tisztaszoftver” igényléséről itt tud bővebb tájékoztatást kapni. 
           </td></tr>
-          <tr><th><span>Igénylés</span></th><td>Amennyiben felketettük érdeklődését, a „Letöltések” menüben megtalálja az ingyenes próba verziót, mely a teljes programot a rendelkezésére bocsájtja 24 órára. Ha úgy látja, hogy intézménye jó hasznát venné az Értékek-nek keressen meg minket a „Kapcsolat” menüpont alatt és egyéni díjszabás keretén belül aktiváljuk a már telepített programot!
+          <tr><th class="fuggoleges"><span>Igénylés</span></th><td>Amennyiben felketettük érdeklődését, a „Letöltések” menüben megtalálja az ingyenes próba verziót, mely a teljes programot a rendelkezésére bocsájtja 24 órára. Ha úgy látja, hogy intézménye jó hasznát venné az Értékek-nek keressen meg minket a „Kapcsolat” menüpont alatt és egyéni díjszabás keretén belül aktiváljuk a már telepített programot!
           </td></tr>
-          <tr><th><span>Kiknek ajánjluk?</span></th> <td>Minden olyan fejlesztő-nevelő vagy vizsgáló intézménynek vagy pedagógusnak akik szeretnék megkönnyíteni a munkakörükhöz tartozó adminisztrációs terheket és egyben egységessé tenni őket, továbbá látni szeretnék a vizsgált időszakon belüli eredményeket vizuálisan is.
+          <tr><th class="fuggoleges"><span>Kiknek ajánjluk?</span></th> <td>Minden olyan fejlesztő-nevelő vagy vizsgáló intézménynek vagy pedagógusnak akik szeretnék megkönnyíteni a munkakörükhöz tartozó adminisztrációs terheket és egyben egységessé tenni őket, továbbá látni szeretnék a vizsgált időszakon belüli eredményeket vizuálisan is.
           </td></tr>
         </div>
 
         <div class="verziokmobil">
-          <tr><th colspan="2" style="padding-top: 50px;">Online</th>
+          <tr><th  colspan="2" style="padding-top: 50px;">Online</th>
           </tr>
-          <tr><th><span>Tulajdonságok</span></th><td>Az Értékek Online tartalmában megegyezik az „Asztali” verzióval, de nincsenek külön rendszerkövetelményei. Mobil eszközről és táblagépről is remekül működik, továbbá előtelepítésre és aktiválásra sincs szükség. Vizsgáljon és értékeljen bárhol és bármikor. Szerverünk amellett, hogy biztonságosan tárolja adatait, automatikusan menti munkáját. Nem kell többé emlékezetből értékelést írnia, vagy a számítógéphez szaladva megszakítani a vizsgálatot. Csak fogja okos eszközét a kezébe és koppintson a megfelelő válaszra. Válaszainak kimenete itt is egy letisztult és informatív értékelés/jellemzés lesz, melyet könnyen tud majd megosztani bárkivel, immár végtelen számú időszakot vizsgálva. A képességháló rendszer ugyanúgy átlátható és mindenki számára érthető, hogy lássa a fejlődést.
+          <tr><th class="fuggoleges"><span>Tulajdonságok</span></th><td>Az Értékek Online tartalmában megegyezik az „Asztali” verzióval, de nincsenek külön rendszerkövetelményei. Mobil eszközről és táblagépről is remekül működik, továbbá előtelepítésre és aktiválásra sincs szükség. Vizsgáljon és értékeljen bárhol és bármikor. Szerverünk amellett, hogy biztonságosan tárolja adatait, automatikusan menti munkáját. Nem kell többé emlékezetből értékelést írnia, vagy a számítógéphez szaladva megszakítani a vizsgálatot. Csak fogja okos eszközét a kezébe és koppintson a megfelelő válaszra. Válaszainak kimenete itt is egy letisztult és informatív értékelés/jellemzés lesz, melyet könnyen tud majd megosztani bárkivel, immár végtelen számú időszakot vizsgálva. A képességháló rendszer ugyanúgy átlátható és mindenki számára érthető, hogy lássa a fejlődést.
           </td></tr>
-          <tr><th><span>Követelmények</span></th><td rowspan="2">Tervezett indulás: 2024. Január 1. 
+          <tr><th class="fuggoleges"><span>Követelmények</span></th><td rowspan="2">Tervezett indulás: 2024. Január 1. 
             Amennyiben szeretne előregisztrálni, megteheti a „Kapcsolat” menüpont alatt, az „Árajánlatot kérek” gombra kattintva. Kérjük tüntesse fel a szövegdobozban, hogy előregisztrálni szeretne.                
           </td></tr>
-          <tr><th><span>Igénylés</span></th></tr>
-          <tr><th><span>Kiknek ajánjluk?</span></th> <td>Főleg szakértői bizottságok és vizsgáló szervezeteknek hasznos, akik valós időben készítenek szakvéleményt. De ugyanúgy hasznos gyógypedagógia és szociális intézményeknek akik szeretnék megkönnyíteni a munkakörükhöz tartozó adminisztrációs terheket és egyben egységessé tenni őket, továbbá látni szeretnék a vizsgált időszakon belüli eredményeket vizuálisan is.
+          <tr><th class="fuggoleges"><span>Igénylés</span></th></tr>
+          <tr><th class="fuggoleges"><span>Kiknek ajánjluk?</span></th> <td>Főleg szakértői bizottságok és vizsgáló szervezeteknek hasznos, akik valós időben készítenek szakvéleményt. De ugyanúgy hasznos gyógypedagógia és szociális intézményeknek akik szeretnék megkönnyíteni a munkakörükhöz tartozó adminisztrációs terheket és egyben egységessé tenni őket, továbbá látni szeretnék a vizsgált időszakon belüli eredményeket vizuálisan is.
           </td></tr>          
         </div>
         </table>
