--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <svg class="circ2" viewBox="0 0 100 100">
           <circle cx="50" cy="50" r="28" stroke="gold"/></svg>
     </div>
-    <div class="supporters">
+    <div class="supporters"><a class="kv" href="http://kerekvilagalapitvany.hu/" target="_blank"></a>
     <svg class="circs2" viewBox="0 0 100 100">
       <circle cx="60" cy="28" r="17" stroke="black"/></svg>
       <div class="logo1_image"></div>
@@ -57,7 +57,7 @@
                   </div>
             </div>
             <a href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
-            <a href=""><span id="c1">T</span>ÁMOGATÓNK</a>
+            <a href="./temakor.html"><span id="c1">T</span>ÉMAKÖRÖK</a>
           </div>
         </div>
       </div>
@@ -145,12 +145,10 @@
     </div>
 
     <footer>
-
-     <img src="./media/FOOTER/2.png" alt="" id="face" >
+      <a href="https://www.facebook.com/search/top?q=kerek%20vil%C3%A1g%20alap%C3%ADtv%C3%A1ny" id="links" alt="Face icon"><img src="./media/FOOTER/2.png" alt="" id="face"></a>
      <p> Ha felkeltettük érdeklődését, vagy csak kérdése van írjon nekünek az <a href="mailto:info@ertekek.hu">info@ertekek.hu</a>-ra vagy hívjon a minket <a href="tel:+06301784272"> +36 30 1784272 </a> -es telefonszámon.</p>
-     <img src="./media/FOOTER/1.png" alt="" id="tel">
-    <img src="./media/FOOTER/3.png" alt="" id="mail">
-    
+     <a href="tel:+30301784272" id="links"></a><img src="./media/FOOTER/1.png" alt="Tel icon" id="tel"></a>
+     <a href="info@ertekek.hu" id="links"><img src="./media/FOOTER/3.png" alt="Mail icon" id="mail"></a>
     </footer>
 
 <script src="./zeta.js"></script>
