--- a/programrol.html
+++ b/programrol.html
@@ -57,7 +57,7 @@
                   </div>
             </div>
             <a href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
-            <a href="./temakor.html"><span id="c1">T</span>ÉMAKÖRÖK</a>
+            <a href="./temakor.html" style="color:black"><span id="c1">T</span>ÉMAKÖRÖK</a>
           </div>
         </div>
       </div>
@@ -122,7 +122,7 @@
      <a href="tel:+30301784272" id="links"></a><img src="./media/FOOTER/1.png" alt="Tel icon" id="tel"></a>
      <a href="info@ertekek.hu" id="links"><img src="./media/FOOTER/3.png" alt="Mail icon" id="mail"></a>
     </footer>
-    
+
     <script src="./zeta.js"></script>
 </body>
 </html>
