--- a/verziok.html
+++ b/verziok.html
@@ -57,7 +57,7 @@
                   </div>
             </div>
             <a href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
-            <a href="./temakor.html"><span id="c1">T</span>ÉMAKÖRÖK</a>
+            <a href="./temakor.html" style="color:black"><span id="c1">T</span>ÉMAKÖRÖK</a>
           </div>
         </div>
       </div>
