--- a/programrol.html
+++ b/programrol.html
@@ -80,7 +80,7 @@
         <div class="cimke2"><span id="c3">M</span><span>iért és kiknek ajánjluk?</span> </div>
           <p> 
           Az Értékek elsősorban fejlesztő - nevelő tevékenységet végző intézményeknek készült abból a célból, hogy a fejlesztő munkát végző pedagógusok és terapeuták gyorsabban készüljenek el adminisztratív dokumentációjukkal és képet kapjanak a vizsgált személyek állapotáról.
-          A kötelező jellemzések létrehozásán túl, kiváltképp hasznos ha elektronikus úton átküldve, vagy pár oldalban kinyomtatva egy-egy érintett személy teljes képet kaphat egy fejlesztés alatt álló személyről, mindezt egységes formában. Fejlesztési célokat is könnyebb megfogalmazni, ha tételesen fel vannak sorolva a fejlesztendő személy jelenlegi képességei és az új kollegáknak is hasznos ha foglalkozás előtt látják a főbb tulajdonságokat.
+          A kötelező jellemzések létrehozásán túl, kiváltképp hasznos, ha elektronikus úton átküldve, vagy pár oldalban kinyomtatva egy-egy érintett személy teljes képet kaphat egy fejlesztés alatt álló személyről, mindezt egységes formában. Fejlesztési célokat is könnyebb megfogalmazni, ha tételesen fel vannak sorolva a fejlesztendő személy jelenlegi képességei és az új kollegáknak is hasznos, ha foglalkozás előtt látják a főbb tulajdonságokat.
           </p> 
         <div class="cimke"><span id="c2">H</span><span>asználat</span> </div>
           <p> 
@@ -96,7 +96,7 @@
           </p> 
           <img src="./media/PROGRAMROL/Képkivágás.JPG" alt="" class="scshhot"> 
           <p>
-          A képen látható gyermek első időszakban vizsgűét eredményei a narancs és piros színnel jelölt terülteken romlottak ,míg a szürkével jelzett terülteten javulás látható.A diagrammok (vagy képességhálók) minden témakörben elérhetőek al-témakörönkénti bontásában,illetve a hét fő területet is összehasonlíthatja a két külön vizsgált időszakban. 
+          A képen látható gyermek első időszakban vizsgált eredményei a narancs és piros színnel jelölt területeken romlottak, míg a szürkével jelzett területen javulás látható. A diagrammok (vagy képességhálók) minden témakörben elérhetőek altémakörönkénti bontásában, illetve a hét fő területet is összehasonlíthatja a két külön vizsgált időszakban. 
           </p>
           <div class="cimke"><span id="c2">K</span><span>imenet és tárolhatóság</span> </div>          
           <p>  Az értékek digitális verzióinak kimeneti fájljai lehetnek PDF dokumentumok melyek a szöveges értékeléseket képesek megjeleníteni, illetve a diagramm elemeket lehet képekként is menteni.
@@ -110,7 +110,7 @@
           </p>
         <div class="cimke2"><span id="c3">P</span>róba verzió<span></span> </div>
           <p> 
-          Bizonytalan megfelel e önnek az Értékek program? A „Verziók” menüpont alatt kattintson a „Demó verzió” lehetőségre. A letöltés gombra kattintva letöltheti a próbaverziót. A letöltött fájlt nyissa meg, telepítse a programot a „next” gombokra kattintva. A telepítés végeztével 24 órája van kipróbálni az Értékek asztali verzióját. Az idő letelte után a program zárolja magát. Ha ezután is szeretné igény bevenni szolgáltatásainkat keressen minket bizalommal! 
+          Bizonytalan megfelel e önnek az Értékek program? A „Programról” menüpont alatt kattintson a „Letöltés” lehetőségre. A letöltés gombra kattintva letöltheti a próbaverziót. A letöltött fájlt nyissa meg, telepítse a programot a „next” gombokra kattintva. A telepítés végeztével 24 órája van kipróbálni az Értékek asztali verzióját. Az idő letelte után a program zárolja magát. Ha ezután is szeretné igény bevenni szolgáltatásainkat keressen minket bizalommal! 
          </p> 
         </div>
 
