--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
   </header>
   
     <nav>   
-
       <div class="mobilmenu"><input class="checkbox" type="checkbox" name="toogle" id="toogle" />
       <div class="hamburger"></div>
       <div class="mobildropdown">
@@ -53,7 +52,7 @@
                   <div class="dropdown-content">
                         <a href="./programrol.html" style="color:black"><span id="c1">M</span>IT TUD?</a>
                         <a href="./verziok.html" style="color:black"><span id="c1">V</span>ERZIÓK</a>
-                        <a href="#" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
+                        <a href="./letoltes.html" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
                   </div>
             </div>
             <a href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
@@ -61,7 +60,6 @@
           </div>
         </div>
       </div>
-
     </nav>
 
     <section>
