--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -53,7 +53,7 @@
                   <div class="dropdown-content">
                         <a href="./programrol.html" style="color:black"><span id="c1">M</span>IT TUD?</a>
                         <a href="./verziok.html" style="color:black"><span id="c1">V</span>ERZIÓK</a>
-                        <a href="#" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
+                        <a href="./letoltes.html" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
                   </div>
             </div>
             <a class="current" href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
