--- a/rolunk.html
+++ b/rolunk.html
@@ -54,7 +54,7 @@
                   <div class="dropdown-content">
                         <a href="./programrol.html" style="color:black"><span id="c1">M</span>IT TUD?</a>
                         <a href="./verziok.html" style="color:black"><span id="c1">V</span>ERZIÓK</a>
-                        <a href="#" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
+                        <a href="./letoltes.html" style="color:black"><span id="c1">L</span>ETÖLTÉS</a>
                   </div>
             </div>
             <a href="./kapcsolat.html" style="color:black"><span id="c1">K</span>APCSOLAT</a>
@@ -67,7 +67,7 @@
 
     <section class="rolunk"> 
 
-      <p class="alcim"><span id="c1">K</span>ik állnak az Értékek mögött, illetve kik fognak önnek segíteni ha technikai vagy szakmai problémái/észrevételei akadnak? </p>
+      <p class="alcim"><span id="c1">K</span>ik állnak az Értékek mögött, illetve kik fognak önnek segíteni, ha technikai vagy szakmai problémái/észrevételei akadnak? </p>
 
       <div class="szemely_contentI">
           <div class="cimke">Bergmann Éva </div>
@@ -84,7 +84,7 @@
       </div>
       
       <div class="szemely_contentII">
-        <div class="cimke2">Salamon Szilvia</div>
+        <div class="cimke2">Koncz-Salamon Szilvia</div>
         <div class="logo">
           <svg class="circ1b" viewBox="0 0 100 100">
             <circle cx="50" cy="50" r="30" stroke="black"/></svg>
