--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <div class="logobar">
             <a class="logo"><i>Kövessen minket:</i>  
+                <p class="cim">KEREK VILÁG ALAPÍTVÁNY</p><span> ...mindennek életnek értelme  és célja van"</span>
                 <img src="./media/2021_Facebook_icon.svg.png" alt="">
                 <img src="./media/600px-Instagram_icon.png" alt="">
             </a>
