--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
     </div>
     
     <div class="tamop_mob">
-        <hr>
-        <p>Köszönjük ha támogat minket!<br><br>
-            Adószámunk:<br>19031628-1-02 <br><br>
+        <div class="cimke2" id="tamopcimke" >Ha ön is szeretne segíteni:</div>
+            <br>Adószámunk:<br>19031628-1-02 <br><br>
             Bankszámlaszámunk: <br>Takarékbank Zrt. 71800264-16026209</span>
-        </p>
+            <br><br>
+             
     <footer>
         <a href="" style="margin-right: 25%;">Adatkezelés</a>
         <a href="">Hívjon miknet</a>
